@@ -1,6 +1,7 @@
 -- edge --
 Impr: if the array of API points is empty, it's not added into js_config anymore.
 New: new testing widgets in netzke_controller.
+Fix: extra CSS includes now take effect.
 
 v0.4.1
 Fix: the API call (at the JavaScript side) was ignoring the callback parameter.
